fix: Non-centered concert entries. Mostly visible on smartphone

--- a/css/band.css
+++ b/css/band.css
@@ -146,6 +146,7 @@ iframe {
 }
 .EventsList {
   margin-bottom:15px;
+  text-align:center;
 }
 .EventsList .thumbnail {
   border:0;
